--- a/mi/css/commonzsc.css
+++ b/mi/css/commonzsc.css
@@ -1,20 +1,21 @@
+
 .container{
-	width: 1233px;
+	width: 1226px;
 	margin-left: auto;
 	margin-right: auto;
 }
 .clearfix:after{
-	height: 0;
+	display: block;
 	content: '';
 	clear: both;
-	display: block;
-	visibility:hidden; 
+	height: 0;
+	visibility: hidden;
 }
 .clearfix{
-	*zoom: 1;
+	*zoom:1;
 }
 a{
-	font-style: 12px;
+	font-size: 12px;
 	text-decoration: none;
 	color: #b0b0b0;
 }
