--- a/mi/css/fuwuzsc.css
+++ b/mi/css/fuwuzsc.css
@@ -18,41 +18,44 @@
 		color: #ff6700;
 	}
 .top{
-	background: #333333;
-	font-size: 12px;
+	background: #333;
 }
 .top .top-nav{
 	float: left;
-	height: 40px;
-	line-height: 40px;
 }
-.top .top-nav .top-nav-itme{
+.top .top-nav .top-nav-item{
 	float: left;
+	height: 40px;
 	line-height: 40px;
 }
 .top .sep{
-	color: #413b36;
+	color:#413b36;
 	margin: 0 0.5em;
 }
+
 .top .user-info{
 	float: right;
-	width: 170px;
-	height: 40px;
-	margin-right: 20px;
+	width: 160px;
 }
 .top .user-info .user-info-item{
 	float: left;
 	height: 40px;
 	line-height: 40px;
 }
+
 .top .cart{
 	float: right;
 	width: 120px;
 	background: #424242;
+	position: relative;
+}
+.top .cart .cart-box{
+	position: relative;
+	z-index: 889;
 }
 .top .cart .cart-box a{
-	display: block;
-	width: 120px;
+	display: inline-block;
+	width: 100%;
 	height: 40px;
 	line-height: 40px;
 	text-align: center;
@@ -65,37 +68,72 @@
 	background: #fff;
 	color: #ff6700;
 }
-.top .cart .cart-box .box1{
-	width: 320px;
-	height: 100px;
+.top .cart .cart-content{
 	position: absolute;
-	top:40px;
-	right: 60px;
-	text-align: center;
-	line-height: 100px;
-	z-index: 66;
-	color: #424242;
-	display: none;
+	right: 0;
+	top: 40px;
 	background-color: #fff;
-	transition: all 0.3s ;
-	transition-property: height 1s;
+	width: 300px;
+	height: 0;
+	line-height: 100px;
+	z-index: 888;
+	box-shadow: 0px 2px 10px;
+	text-align: center;
+	overflow: hidden;
 }
-.top .cart .cart-box:hover .box1{
+.top .cart .empty-cart{
+	display: inline-block;
+	font-size: 12px;
+	font-weight: 400;
+}
+
+.top .cart .cart-content .loader{
+	position: relative;
+	width: 4px;
+	height: 20px;
+	background: #ff6700;
+	margin: 0px auto;
+	animation: loading 0.5s linear 0s infinite alternate;
+}
+.top .cart .cart-content .loader:after,.loader:before{
+	position: absolute;
+	top: 0;
+	left: 0;
 	display: block;
-	transform: translateY(-1px);
-	box-shadow: 0 10px 10px rgba(0,0,0,0.2);
-	height: 100px;
+	content: '';
+	width: 4px;
+	height: 20px;
+	background: #ff6700;
+}
+.top .cart .cart-content .loader:after{
+	margin-left: 10px;
+	transform: scale(1,0.5);
+	animation: loading 0.3s linear 0.3s infinite alternate;
+}
+.top .cart .cart-content .loader:before{
+	margin-left: -10px;
+	transform: scale(1,0.5);
+	animation: loading 0.3s linear 0.5s infinite alternate;
+}
+@keyframes loading{
+	from{
+		opacity: 0.5;
+		transform: scale(1,0.5);
+	}
+	to{
+		opacity: 1;
+		transform: scale(1,1);
+	}
 }
 .header{
 	height: 100px;
-	position: relative;
 }
 .header .logo{
 	float: left;
-	height: 55px;
 	width: 55px;
-	background: #ff6700;
+	height: 55px;
 	margin-top: 22px;
+	background: #ff6700;
 }
 .header .logo a{
 	display: block;
@@ -104,114 +142,122 @@
 	background-image: url(../imgzsc/logo.png);
 	background-repeat: no-repeat;
 	background-position: center center;
-	background-origin: cover;
-	text-indent: -100em;
+	text-indent: -9999em;
 }
 .header .header-nav{
 	float: left;
-	height: 100px;
 	margin-left: 190px;
+}
+.header .header-nav a{
+	
+}
+.header .header-nav .nav-item{
+	position: absolute;
+	left: 300px;
+	top: 78px;
+	font-size: 16px;
+	color: #000;
+	display: inline-block;
 }
 .header .header-nav .header-nav-item{
 	float: left;
 	height: 100px;
-	line-height: 100px;
+	line-height: 100px;	
 	margin-right: 20px;
-	/*position: relative;*/
-}
-.header .header-nav .header-nav-item:hover .search-keyword-list{
-	display: block;
 }
 .header .header-nav .header-nav-item a{
 	font-size: 16px;
 	color: #333;
 }
-.header .header-nav .header-nav-item .search-keyword-list{
-	width: 247px;
-	cursor: pointer;
-	display: none;
-	position: absolute;
-	top: 100px;
-	left: 250px;
-	width: 247px;
-	border: 1px solid #ff6700;
-	box-sizing: border-box;
-	background: #fff;
-	font-size: 12px;
-	z-index: 66
-}
-.header .header-nav .header-nav-item .box{
-	background-color: #fff;
-	cursor: pointer;
-	height: 250px;
-	width: 1600px;
-	position: absolute;
-	top: 100px;
-	left: 60px;
-	border-top: 1px solid #e0e0e0;
-	box-sizing: border-box;
-	font-size: 12px;
-	z-index: 99;
-	display: none;
-}
-.header .header-nav .header-nav-item:hover .box{
-	display: block;
-}
-.header .header-nav .header-nav-item .box .box1{
-	width: 150px;
-	position: relative;
-	float: left;
-	margin-left: 50px;
-}
-.header .header-nav .header-nav-item .box .box1:first-child{
-	margin-left: 100px
-}
-.header .header-nav .header-nav-item .box .box1 .box2{
-	width: 205px;
-	height: 113px;
-	margin-top: 35px;
-	border-right: 1px solid #e0e0e0;
-}
-.header .header-nav .header-nav-item .box .box1 .box2 img{
-	width: 205px;
-	height: 113px;
-}
-.header .header-nav .header-nav-item .box .box1 .product-name{
-	font-size: 12px;
-	color: #333333;
-	margin-left: 20px;	
-	text-align: center;
-}
-.header .header-nav .header-nav-item .box .box1 .product-price{
-	font-size: 12px;
-	color: #ff6700;
-	text-align: center;
-	margin-left: 20px;
-	margin-top: -80px;
-}
-.header .header-nav .header-nav-item .search-keyword-list .keyword-item a{
-	width: 100%;
-	height: 30px;
-	box-sizing: border-box;
-	padding: 10px 20px;
-}
-.header .header-nav .header-nav-item .search-keyword-list .keyword-item:hover{
-	background-color: #ff6700;
-}
-.header .header-nav .header-nav-item .search-keyword-list .keyword-item .iconfont{
-	float: right;
-	color: #757575;
-}
-.header .header-nav .header-nav-item .search-keyword-list .keyword{
-	font-size: 16px;
-	color: #757575;
-}
-.header .header-nav .header-nav-item .search-keyword-list:foucs{
-	display: block;
-	border-color: #ff6700;
-}
 .header .header-nav .header-nav-item a:hover{
 	color: #ff6700;
+}
+.header .header-nav-content{
+	position: absolute;
+	top: 140px;
+	left: 0;
+	width: 100%;
+	/*height: 180px;*/
+	height: 0px;
+	background: #fff;
+	/*border-top: 1px solid #ccc;*/
+	overflow: hidden;
+	box-shadow: 0px 2px 2px rgba(0,0,0,0.3);
+	z-index: 1111;
+}
+.header .header-nav-content li{
+	float: left;
+	width: 200px;
+	height: 100px;
+	text-align: center;
+	position: relative;
+}
+.header .header-nav-content li .img-box{
+	width: 100%;
+	height: 100px;
+	margin-top: 30px;
+	border-right: 1px solid #ccc;
+}
+.header .header-nav-content li .img-box img{
+	width: 100px;
+	height: 100%;
+}
+.header .header-nav-content .product-name{
+	font-size: 12px
+}
+.header .header-nav-content .product-price{
+	font-size: 12px;
+	color: #ff6700;
+}
+.header .header-nav-content .tag{
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 60px;
+	height: 20px;
+	line-height: 20px;
+	font-size: 12px;
+	margin-left: -30px;
+	color: #ff6700;
+	border: 1px solid #ff6700;
+}
+.header .loader{
+	position: relative;
+	width: 4px;
+	height: 20px;
+	background: #ff6700;
+	margin: 0px auto;
+	animation: loading 0.5s linear 0s infinite alternate;
+}
+.header .loader:after,.loader:before{
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	content: '';
+	width: 4px;
+	height: 20px;
+	background: #ff6700;
+}
+.header .loader:after{
+	margin-left: 10px;
+	transform: scale(1,0.5);
+	animation: loading 0.3s linear 0.3s infinite alternate;
+}
+.header .loader:before{
+	margin-left: -10px;
+	transform: scale(1,0.5);
+	animation: loading 0.3s linear 0.5s infinite alternate;
+}
+@keyframes loading{
+	from{
+		opacity: 0.5;
+		transform: scale(1,0.5);
+	}
+	to{
+		opacity: 1;
+		transform: scale(1,1);
+	}
 }
 .header .search{
 	float: right;
@@ -223,18 +269,12 @@
 .header .search .search-text{
 	float: left;
 	width: 246px;
-	height: 50px;
+	height: 100%;
 	border: 1px solid #e0e0e0;
-	border-right: none; 
+	border-right: none;
 	outline: none;
 	padding-left: 10px;
 	box-sizing: border-box;
-}
-.header .search  .search-text:hover{
-	border-color: #999;
-}
-.header .search  .search-text:hover + .search-btn{
-	border-color: #999;
 }
 .header .search .search-btn{
 	float: left;
@@ -243,84 +283,90 @@
 	line-height: 50px;
 	border: 1px solid #e0e0e0;
 	box-sizing: border-box;
-	text-align: center;
+	text-align:center;
 	font-size: 18px;
-}
-.header .search:focus + .search-btn{
-	border-color: #ff6700;
-}
-
-.header .search .search-btn:hover{
-	background: #ff6700;
 	cursor: pointer;
-	color: #fff;
-}
-.header .search .search-text:focus {
-	border-color: #ff6700;
-}
-.header .search .search-text:focus + .search-btn {
-	border-color: #ff6700;
 }
 .header .search .search-hot-words{
 	position: absolute;
-	left: 100px;
+	left:100px;
 	line-height: 50px;
-}
-.header .search .search-text:focus ~ .search-hot-words{
-	display: none;
-}
-.header .search .search-hot-words .search-hot-words-item:hover{
-	background: #ff6700;
-	line-height: 18px;
-	height: 18px;
-
 }
 .header .search .search-hot-words .search-hot-words-item{
 	display: inline-block;
-	height: 12px;
-	font-size: 12px;
-	line-height: 12px;
-	padding: 0 3px;
+	height: 18px;
+	line-height: 18px;
+	padding: 0 6px;
 	color: #757575;
 	background: #eee;
 }
+
 .header .search .search-keyword-list{
 	display: none;
 	position: absolute;
-	top: 50px;
-	left: 0px;
+	top:50px;
+	left:0;
+	z-index: 999;
 	width: 247px;
 	border: 1px solid #ff6700;
 	border-top: none;
 	box-sizing: border-box;
 	background: #fff;
-	font-size: 12px;
-	z-index: 66
 }
-.header .search-text:focus~.search-keyword-list{
-	display: block;
-	border-color: #ff6700;
-}
-.header .search-keyword-list .keyword-item{
+.header .search .search-keyword-list .keyword-item{
 	height: 30px;
 	line-height: 30px;
 }
 .header .search .search-keyword-list .keyword-item a{
+	display: block;
 	width: 100%;
 	height: 30px;
 	box-sizing: border-box;
 	padding: 0 10px;
+
 }
-.header .search .search-keyword-list .keyword-item:hover{
-	background: #eee;
-}
-.header .keyword{
+.header .search .search-keyword-list .keyword-item .keyword{
 	color: #333;
 }
-
 .header .search .search-keyword-list .keyword-item .num{
 	float: right;
 	color: #b0b0b0;
+}
+
+.header .search .search-text:hover{
+	border-color: #999;
+}
+.header .search .search-text:hover + .search-btn{
+	border-color: #999;
+}
+.header .search .search-btn:hover{
+	background: #ff6700;
+	border: none;
+	color: #fff;
+}
+.header .search .search-hot-words .search-hot-words-item:hover{
+	background: #ff6700;
+	color: #fff;
+}
+.header .search:hover .search-text,
+.header .search:hover .search-btn
+{
+	border-color: #999;
+}
+.header .search .search-text:focus{
+	border-color: #ff6700;
+}
+.header .search .search-text:focus + .search-btn{
+	border-color: #ff6700;
+}
+.header .search .search-text:focus ~ .search-keyword-list{
+	display: block;
+}
+.header .search .search-text:focus ~ .search-hot-words{
+	display: none;
+}
+.header .search .search-keyword-list .keyword-item a:hover{
+	background: #eee;
 }
 .logo {
 	width: 100%;
@@ -330,12 +376,14 @@
 .logo .hd{
 	font-size: 12px;
 	color:#757575;
+	margin-left: 200px;
 }
 .logo .content{
 		list-style: none;
 		width: 1233px;
 		height: 300px;
 		position: relative;
+		margin-left: 200px;
 }
 .logo li{
 		width: 1233px;
@@ -378,6 +426,7 @@
 .main{
 	width: 100%;
 	height: 1500px;
+	margin-left: 20px;
 }
 .main .top{
 	width: 100%;
@@ -451,6 +500,7 @@
 .box1{
 	height: 500px;
 	position: relative;
+	margin-left: 150px;
 }
 .service .box1 h2{
 	width: 100%;
@@ -511,6 +561,8 @@
 }
 .box2{
 	height: 500px;
+	margin-top: 80px;
+	margin-left: 150px;
 }
 .service .box2 h2{
 	width: 100%;
@@ -545,67 +597,87 @@
 	color: #fff;
 	cursor: pointer;
 }
-.service .box2 .item{
-	width: 175px;
-	height: 65px;
+.service .box2 .header-nav #tab-container li{
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
-.service .box2 .header-nav #tab-container .tab-item .a1{
+.service .box2 .header-nav #tab-container .a1{
 	font-size: 15px;
 	color: #222222;
 	margin-left: 30px;
+	width: 200px;
+	height: 50px;
 }
-.service .box2 .header-nav #tab-container .tab-item .a1:hover .d1{
+.service .box2 .header-nav #tab-container .a1:nth-child(1){
+	position: absolute;
+	left: 200px;
+	top: 0;
+}
+.service .box2 .header-nav #tab-container .a1:nth-child(2){
+	position: absolute;
+	left: 600px;
+	top: 0;
+}
+.service .box2 .header-nav #tab-container .a1:nth-child(3){
+	position: absolute;
+	left: 200px;
+	top: 50px;
+}
+.service .box2 .header-nav #tab-container .a1:nth-child(4){
+	position: absolute;
+	left: 600px;
+	top: 50px;
+}
+.service .box2 .header-nav #tab-container .a1:nth-child(5){
+	position: absolute;
+	left: 200px;
+	top: 100px;
+}
+.service .box2 .header-nav #tab-container .a1:nth-child(6){
+	position: absolute;
+	left: 600px;
+	top: 100px;
+}
+.service .box2 .header-nav #tab-container{
+	height: 300px;
+	position: relative;
+}
+
+.service .box2 .header-nav #tab-container .a1:hover .d1{
 	background-color: #ff6700;
 }
-.service .box2 .header-nav #tab-container .tab-item .a1:hover {
+.service .box2 .header-nav #tab-container .a1:hover {
 	color: #ff6700;
 }
-.service .box2 .header-nav #tab-container .tab-item .a1 .d1{
+.service .box2 .header-nav #tab-container .a1 .d1{
 	width: 6px;
 	height: 6px;
 	border-radius: 50%;
 	background-color: #e2e2e2;
 	position: absolute;
 	top: 12px;
-	left: 10px;
+	left: -12px;
 }
-.service .box2 .header-nav #tab-container .tab-item{
+.service .box2 .header-nav #tab-container{
 	width: 300px;
 	height: 30px;
 	line-height: 30px;
 	margin-top: 20px;
 	position: relative;
 }
-.service .box2 .header-nav #tab-container>li:first-child{
-	display: block;
-}
-/*.service .box2 .header-nav #tab-container li:nth-child(2){
-	display: block;
-}
-.service .box2 .header-nav #tab-container li:nth-child(2){
-	display: block;
-}*/
-.service .box2 .header-nav #tab-container>li{
-	display: none;
-}
-.service .box2 .header-nav #tab-container p{
-	color: #767676;
+.service .box2 .header-nav #tab-container .a2{
+	display: inline-block;
 	position: absolute;
-	bottom: -240px;
-	left: 50%;
-	font-size: 16px;
+	top: 180px;
+	left: 500px;
+	color: #767676;
 	cursor: pointer;
+	width: 300px;
 }
-.service .box2 .header-nav #tab-container p:hover{
+.service .box2 .header-nav #tab-container .a2:hover{
 	color: #ff6700;
-}
-.service .box2 .header-nav #tab-container .left,
-.service .box2 .header-nav #tab-container .right{
-	margin-top: 20px;
-	width: 45%;
-	height: 170px;
-	float: left;
-	margin-left: 57px;
 }
 .service .header-nav{
 	margin-top: 20px;
@@ -614,74 +686,19 @@
 	width: 100%;
 	position: relative;
 }
-.service .header-nav .header-nav-item{
+.service .header-nav .active{
+	background-color: #ff6700;
+	color: #fff;
+}
+.service .box2 .header-nav #tab-list li {
 	float: left;
-	width: 150px;
+	width: 180px;
 	height: 100px;
 	line-height: 100px;
-	margin-right: 20px;
-}
-.service .header-nav .header-nav-item:first-child{
-	margin-left: 20px
-}
-.service .header-nav .header-nav-item .tp{
-	font-size: 16px;
-	color: #333;
 	text-align: center;
-	width: 150px;
+}
+.service .box2 .header-nav #tab-list{
 	height: 100px;
-	display: inline-block;
-	position: relative;
-}
-.service .header-nav .header-nav-item #active{
-	background-color: #ff6700;
-	color: #fff;
-}
-.service .header-nav .header-nav-item .tp:hover {
-	background-color: #ff6700;
-	color: #fff;
-}
-.service .header-nav .header-nav-item .a1{
-	width: 900px;
-	height: 200px;
-	position: absolute;
-	top: 2800px;
-	left: 350px;
-	font-size: 14px;
-	cursor: pointer;
-}
-.service .header-nav .header-nav-item .a1 p{
-	position: absolute;
-	bottom: 0;
-	left: 430px;
-	margin-bottom: -30px;
-	color: #767676;
-}
-.service .header-nav .header-nav-item .a1 p:hover{
-	color: #ff6700;
-}
-.service .header-nav .header-nav-item .a1 .a2{
-	width: 900px;
-
-}
-.service .header-nav .header-nav-item .a1 .a2 a{
-	width: 330px;
-	float: left;
-	color: #222222;
-	margin-top: -40px;
-	margin-left: 110px
-}
-.service .header-nav .header-nav-item .a1 .a2 a:hover{
-	color: #ff6700;
-}
-.service .header-nav .header-nav-item .a1 .d1{
-	width: 5px;
-	height: 5px;
-	float: left;
-	background-color: #e0e0e0;
-	margin-top: 50px;
-	margin-right: 10px;
-	border-radius: 50%;
 }
 .contact{
 	width: 100%;
@@ -693,11 +710,13 @@
 	font-size: 30px;
 	color: #666666;
 	text-align: center;
+	margin-top: 20px;
 }
 .contact .box{
 	width: 100%;
 	height: 500px;
 	position: relative;
+	margin-left: 65px;
 }
 .contact .box .box1{
 	width: 360px;
