--- a/mi/css/servicejrx.css
+++ b/mi/css/servicejrx.css
@@ -192,12 +192,14 @@
 	.header .header-nav-content .loader{
 		margin-top: 50px;
 	}
-
+	.header .header-nav .cate-box{
+		position: relative; 
+	}
 	.header .header-nav .cate{
 		display: none;
 		position: absolute;
-		top: 100px;
-		left: 60px;
+		top: 0px;
+		left: -127px;
 		z-index: 999;
 		width: 234px;
 		height: 460px;
@@ -232,9 +234,9 @@
 	.header .header-nav .cate-content{
 		display: none;
 		position: absolute;
-		top: 101px;
-		left: 294px;
-		min-width: 500px;
+		top: 0px;
+		left: 107px;
+		min-width: 1000px;
 		height: 460px;
 		background-color: #fff;
 		box-sizing: border-box;
@@ -420,36 +422,31 @@
 		line-height: 250px;
 		text-align: center;
 	}
-	.carousel .controls{
+	.carousel .bottomBtn{
 		position: absolute;
-		left: 0;
-		bottom: 20px;
-		width: 100%;
-		color: #666;
-		text-align: center;
-		z-index: 1;
+		left: 50%;
+		bottom: 10px;
 	}
-	.carousel .controls .controls-list-item{
-		display: inline-block;
-	}
-	.carousel .controls .controls-list a{
-		background: rgba(255,255,255,0.4);
-		display: block;
+	.carousel .bottomBtn li{
+		float: left;
 		width: 6px;
 		height: 6px;
-		margin: 0 5px;
-		border: 2px solid #000;
+		border: 2px solid #fff;
 		border-color: rgba(255,255,255,0.3);
 		border-radius: 10px;
-		text-align: left;
-
+		background-color: rgba(0,0,0,0.5);
+		margin-right: 5px;
+		cursor: pointer;
 	}
-	.carousel .controls .controls-list a.active{
-		background: rgba(0,0,0,0.4);
+	.carousel .bottomBtn li.active{
+		background-color: rgba(255,255,255,0.4);
+		border-color: rgba(0,0,0,0.3);
+		color: #fff;
 	}
-	.carousel .controls .controls-list a:hover{
-		background: rgba(255,255,255,0.3);
-		border-color: rgba(0,0,0,0.4);
+	.carousel .bottomBtn li:hover{
+		background-color: rgba(255,255,255,0.4);
+		border-color: rgba(0,0,0,0.3);
+		color: #fff;
 	}
 
 	.index-fquestion .fquestion .transi-up:hover h3,
