--- a/mi/css/servicejrx.css
+++ b/mi/css/servicejrx.css
@@ -98,22 +98,54 @@
 		position: relative;
 		height: 100px;
 	}
-	.header .logo{
+	.header .header-logo{
 		float: left;
 		width: 55px;
 		height: 55px;
 		margin-top: 22px;
-		background: #ff6700;
+		/*background: #ff6700;*/
 	}
-	.header .logo a{
+	.header .header-logo a{
+		position: relative;
 		display: block;
 		width: 100%;
 		height: 100%;
+		/*background-image: url(../imagesjrx/logo.png);
+		background-repeat: no-repeat;
+		background-position: 50% 50%;*/
+		overflow: hidden;
+		text-indent: -999em;
+		background: #ff6700;
+		text-align: left;
+	}
+	.header .header-logo a:before{
+		display: block;
+		content: '';
+		width: 55px;
+		height: 55px;
 		background-image: url(../imagesjrx/logo.png);
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
-		text-indent: -999em;
 	}
+	.header .header-logo a:after{
+		position: absolute;
+		left: 0;
+		top: 0;
+		display: block;
+		margin-left: -55px;
+		content: '';
+		width: 55px;
+		height: 55px;
+		background-image: url(../imagesjrx/mi-home.png);
+		background-repeat: no-repeat;
+		background-position: 50% 50%;
+		
+		transition: all 0.3s;
+	}
+	/* .header .header-logo a:hover{
+		margin-left: 55px;
+		transform: translate3d(0,0,0);
+	} */
 	.header .header-nav{
 		float: left;
 		margin-left: 70px;
@@ -683,6 +715,17 @@
 	.index-contact .contact-wrap li:nth-child(3),
 	.index-contact .contact-wrap li:nth-child(6){
 		margin-right: 0;
+	}
+	.index-contact .contact-wrap li:nth-child(3):hover a>p{
+		display: none;
+	}
+	.index-contact .contact-wrap li:nth-child(3) a>img{
+		display: none;
+		margin: 0 auto;
+		padding: 80px;
+	}
+	.index-contact .contact-wrap li:nth-child(3):hover a>img{
+		display: block;
 	}
 	.index-contact .contact-wrap li a{
 		display: block;
