--- a/mi/css/index.css
+++ b/mi/css/index.css
@@ -23,7 +23,6 @@
 	.hd .more.move{
 		margin-top: 24px;
 	}
-
 	.hd .more.move .ctr-btn{
 		float: left;
 		width: 36px;
@@ -71,7 +70,9 @@
 		height: 30px;
 		line-height: 30px;
 		font-size: 16px;
+		border-bottom: 2px solid transparent;
 		cursor: pointer;
+		transition: border-color 0.5s;
 	}
 	.hd .more.tab .tab-item-active{
 		color: #ff6700;
@@ -108,11 +109,11 @@
 		list-style: none;
 	}
 	.product-item-min:hover{
-		box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+		box-shadow: 0 15px 30px rgba(0,0,0,0.1);
 		transform: translateY(-2px);
 	}
 	.product-item-m:hover{
-		box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+		box-shadow: 0 15px 30px rgba(0,0,0,0.1);
 		transform: translateY(-2px);
 	}
 	.product-item-m:hover .view{
@@ -146,8 +147,7 @@
 		text-overflow: ellipsis;
 		white-space: nowrap;
 	}
-	.product-item:first-child,
-	.product-item:nth-child(5){
+	.product-item:nth-child(4n+1){
 		margin-left: 0;
 	}
 	.product-img{
@@ -236,13 +236,13 @@
 
 /*顶部区域开始*/
 	.top{
-		height: 40px;
 		background: #333;
 	}
 	.top .top-nav{
 		float: left;
 	}
 	.top .top-nav .top-nav-item{
+		/*因为都属于浮动流，所以.top-nav-item的高度可以撑起.top-nav*/
 		float: left;
 		height: 40px;
 		line-height: 40px;
@@ -318,12 +318,14 @@
 		background: #ff6700;
 	}
 	.header .logo a{
+		/*不使用inline-block,因为会产生空白间隙*/
 		display: block;
 		width: 100%;
 		height: 100%;
-		background-image: url(../imagesjrx/logo.png);
+		/*background-image: url(../imagesjrx/logo.png);
 		background-repeat: no-repeat;
-		background-position: 50% 50%;
+		background-position: 50% 50%;*/
+		background: url(../imagesjrx/logo.png) no-repeat 50% 50%;
 		text-indent: -999em;
 	}
 	.header .header-nav{
@@ -410,6 +412,7 @@
 		outline: none;
 		padding-left: 10px;
 		box-sizing: border-box;
+		transition: all 0.2s;
 	}
 	.header .search .search-btn{
 		float: left;
@@ -419,12 +422,14 @@
 		border: 1px solid #e0e0e0;
 		box-sizing: border-box;
 		text-align: center;
-		font-size: 20px;
+		font-size: 24px;
+		color: #616161;
 		cursor: pointer;
+		transition: all 0.2s;
 	}
 	.header .search .search-hot-words{
 		position: absolute;
-		left: 110px;
+		right: 62px;
 		line-height: 50px;
 	}
 	.header .search .search-hot-words .search-hot-words-item{
@@ -434,6 +439,7 @@
 		padding: 0px 6px;
 		color: #757575;
 		background: #eee;
+		transition: all 0.2s;
 	}
 	.header .search .search-keyword-list{
 		display: none;
@@ -454,21 +460,18 @@
 	.header .search .search-keyword-list .keyword-item a{
 		display: block;
 		width: 100%;
-		height: 30px;
 		box-sizing: border-box;
 		padding: 0px 10px;
 	}
 	.header .search .search-keyword-list .keyword-item .keyword{
-		color: #333;
+		color: #424242;
 	}
 	.header .search .search-keyword-list .keyword-item .num{
 		float: right;
 		color: #b0b0b0;
 	}
-	.header .search .search-text:hover{
-		border-color: #999;
-	}
-	.header .search .search-text:hover + .search-btn{
+	.header .search:hover .search-text,
+	.header .search:hover .search-btn{
 		border-color: #999;
 	}
 	.header .search .search-btn:hover{
@@ -483,13 +486,7 @@
 	.header .search .search-text:focus ~ .search-keyword-list{
 		display: block;
 	}
-	.header .search:hover .search-text,
-	.header .search:hover .search-btn{
-		border-color: #999;
-	}
-	.header .search .search-text:focus{
-		border-color: #ff6700;
-	}
+	.header .search .search-text:focus,
 	.header .search .search-text:focus + .search-btn{
 		border-color: #ff6700;
 	}
@@ -537,10 +534,10 @@
 		display: block;
 		font-size: 14px;
 		color: #fff;
-
 	}
 	.home .banner .cate .cate-item i{
 		float: right;
+		color: rgba(255,255,255,0.5);
 	}
 	.home .banner .cate-content{
 		display: none;
@@ -583,67 +580,6 @@
 		text-align: center;
 		font-size: 14px;
 	}
-	/*
-	.home .banner .carousel{
-		position: relative;
-		height: 100%;
-	}
-	.home .banner .carousel .carousel-imgs-item{
-		position: absolute;
-		top: 0px;
-		left: 0px;
-		height: 100%;
-		transition: all 0.5s;
-	}
-	.home .banner .carousel .arrow{
-		position: absolute;
-		top: 50%;
-		z-index: 888;
-		width: 40px;
-		height: 80px;
-		line-height: 80px;
-		margin-top: -40px;
-		font-size: 30px; 
-		color: #eee;
-		text-align: center;
-		cursor: pointer;
-	}
-	.home .banner .carousel .arrow:hover{
-		background: rgba(0,0,0,0.5);
-	}
-	.home .banner .carousel .left-arrow{
-		left: 234px;
-	}
-	.home .banner .carousel .right-arrow{
-		right: 0px;
-	}
-
-	.home .banner .carousel .carousel-imgs-item img{
-		width: 100%;
-		height: 460px;
-	}
-	.home .banner .carousel .carousel-btn{
-		position: absolute;
-		bottom: 24px;
-		right: 35px;
-		z-index: 888;
-	}
-	.home .banner .carousel .carousel-btn li{
-		float: left;
-		width: 6px;
-		height: 6px;
-		border: 2px solid #b5b3ad;
-		margin-left: 10px;
-		background: #96938a;
-		border-radius: 50%;
-		cursor: pointer;
-	}
-	.home .banner .carousel .carousel-btn li:hover,
-	.home .banner .carousel .carousel-btn li.active{
-		background: #fcf9f0;
-		border-color: #979590;
-	}
-	*/
 	.home .banner .leftArrow,
 	.home .banner .rightArrow{
 		position: absolute;
@@ -704,22 +640,25 @@
 		height: 170px;
 		background: #5f5750;
 	}
-	.home .hot .hot-channel{
-		height: 170px;
-		background: #5f5750;
-	}
 	.home .hot .hot-channel .hot-channel-item{
 		float: left;
 		position: relative;
 		width: 78px;
 		height: 85px;
-		padding-top: 20px;
+		padding: 0 3px;
 		box-sizing: border-box;
 		text-align: center;
 	}
+	.home .hot .hot-channel .hot-channel-item a{
+		display: block;
+		padding-top: 18px;
+		transition: color 0.2s;
+	}
 	.home .hot .hot-channel .hot-channel-item i{
 		display: block;
-		font-size: 26px;
+		height: 24px;
+		line-height: 24px;
+		font-size: 24px;
 		margin-bottom: 7px;
 	}
 	.home .hot .hot-channel  .right-line:after{
@@ -730,8 +669,7 @@
 		content: "";
 		width: 1px;
 		height: 70px;
-		background: #eee;
-		opacity: 0.1;
+		background: #665e57;
 	}
 	.home .hot .hot-channel .top-line:before{
 		display: block;
@@ -741,21 +679,24 @@
 		content: "";
 		width: 65px;
 		height: 1px;
-		background: #eee;
-		opacity: 0.1;
+		background: #665e57;
 	}
 	.home .hot .hot-promo .hot-promo-item{
 		float: left;
 		margin-left: 15px;
 		width: 316px;
 		height: 170px;
-		transition: box-shadow 0.3s;
+		transition: box-shadow 0.2s linear;
 	}
 	.home .hot .hot-promo .hot-promo-item:hover{
-		box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+		box-shadow: 0 15px 30px rgba(0,0,0,0.1);
 	}
 	.home .hot .hot-promo .hot-promo-item:first-child{
 		margin-left: 0px;
+	}
+	.home .hot .hot-promo .hot-promo-item a{
+		display: block;
+		height: 170px;
 	}
 	.home .hot .hot-promo .hot-promo-item-img{
 		width: 100%;
@@ -770,7 +711,6 @@
 	.flash .hd .more{
 		margin-top: 24px;
 	}
-
 	.flash .hd .more .ctr-btn{
 		float: left;
 		width: 36px;
@@ -838,7 +778,6 @@
 		height:340px;
 		padding: 30px 20px 0px 20px;
 	}
-
 	.flash .product-item .bg{
 		position: absolute;
 		top:0;
@@ -887,7 +826,7 @@
 		transition: all 0.2s linear;
 	}
 	.main .phone .col1:hover{
-		box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+		box-shadow: 0 15px 30px rgba(0,0,0,0.1);
 		transform: translateY(-2px);
 	}
 	.main .phone .col1 img{
